--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -18,8 +18,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url(https://knowledge.app.de/img4.jpg);
-
+  background-image: 'url(https://frontend.devops-knowledge.de/img4.jpg)';
   background-size: cover;
   background-repeat: no-repeat;
 }
